clang/test/BSC/Negative/Trait/r1/definition_5/definition_5.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This* this, int a);
};

_Trait F* bar(_Trait F* i, int a) {
  i->foo(42);
  return i;
}

struct S{
  int x;
};

_Impl _Trait F for struct S; // expected-error {{function 'foo' in '_Trait F' is not implemented for 'struct S'}} 

int main() {
  struct S s1 = { .x = 42 };
  return 1;
};
